# jvmcraft

./: .gitignore  Cargo.toml  JOURNEY.md  LICENSE  Makefile  README.md  STATUS.md
.github/workflows/: coverage.yml  lint.yml
samples/: Add.java  Demo.java  Print.java  SocketClient.java  SocketServer.java  StringConcat.java  TestException.java
samples/print/: Print.java  StringConcat.java
src/: main.rs  utils.rs
src/class_loader/: attributes.rs  class_file.rs  constant_pool.rs  fields.rs  interfaces.rs  loader.rs  methods.rs  mod.rs
src/native/: mod.rs  native_dispatcher.rs  native_impl.rs
src/native/java/io/: filedescriptor.rs  fileinputstream.rs  mod.rs
src/native/java/lang/: class.rs  classloader.rs  mod.rs
src/native/java/lang/invoke/: methodhandle.rs  methodhandlenatives.rs  mod.rs  varhandle.rs
src/native/java/lang/ref/: reference.rs
src/native/jdk/: mod.rs
src/native/jdk/internal/misc/: unsafe.rs
src/native/jdk/internal/reflect/: reflection.rs
src/native/jdk/net/: linuxsocketoptions.rs  mod.rs
src/native/sun/: mod.rs
src/native/sun/nio/: mod.rs
src/native/sun/nio/ch/: ioutil.rs  mod.rs  net.rs  socketdispatcher.rs
src/runtime/: constants.rs  double.rs  errors.rs  float.rs  frame.rs  heap.rs  integer.rs  jvm.rs  lambdamanager.rs  long.rs  mod.rs  modulemanager.rs  native.rs  nativeimpl.rs  nativememory.rs  opcode.rs  reference.rs  test_float.rs  test_general.rs  test_integer.rs  test_opcode.rs  test_reference.rs  types.rs
tests/classes/: TestFloat.java  TestGeneral.java  TestInteger.java  TestReference.java
