[package]
name = "jvmcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
flexi_logger = "0.30.1"
libc = "0.2.172"
log = "0.4.27"
rand = "0.9.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[dev-dependencies]
grcov = "0.9"
